@@ -3,6 +3,8 @@ Summary of important user-visible changes for Windows 1.4.0+
 
  ** bugfix return empty value for a null dispatch type
 
+ ** add override methods function
+
 Summary of important user-visible changes for Windows 1.4.0
 ------------------------------------------------------------
  ** added winopen function
